--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Shall we chat?",
+  "short_name": "Qin Lightning Talk",
   "name": "Have fun with chat app!",
   "icons": [
     {
